fix problem of uneven height in grid when text wraps

--- a/HTML_CSS_JS_Projects/011_education_website/style.css
+++ b/HTML_CSS_JS_Projects/011_education_website/style.css
@@ -664,6 +664,7 @@ section.meetings {
 	padding: 2.5rem;
 	font-size: 1.8rem;
 	color: #1f272b;
+	height: 11ch;
 	text-align: center;
 	border-bottom: 1px solid #eee;
 	font-weight: 500;
